[package]
name = "strumbra"
version = "0.1.0"
edition = "2021"

description = "An implementation for Umbra-style strings (also known as German strings)"
categories = ["data-structures"]
keywords = ["german-string", "umbra-string", "cache-friendly", "olap"]

repository = "https://gitlab.com/ltungv/strumbra"
license-file = "LICENSE"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
