[package]
name = "strumbra"
version = "0.6.0"
edition = "2024"

description = "An implementation for Umbra-style strings (also known as German strings)"
categories = ["data-structures"]
keywords = ["german-string", "umbra-string", "string"]

repository = "https://gitlab.com/ltungv/strumbra"
license = "MIT"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.141", default-features = false }

[dependencies]
serde = { version = "1.0.219", optional = true, default-features = false }

[features]
default = []
serde = ["dep:serde"]
